# Solemne_1_Aplicaciones_Matias_Carcamo_Oskar_Rehbein

./: .dockerignore  .gitignore  Dockerfile  EXPLICACION.md  README.md  pyproject.toml
.github/workflows/: docker.yml  pytest.yml  ruff.yml
hora/: main.py  test_main.py  test_time_service.py  time_service.py
